--- a/crawler/package.json
+++ b/crawler/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "argparse": "^1.0.10",
         "file-type": "^12.1.0",
+        "fs-extra": "^8.1.0",
         "mime-types": "^2.1.24",
         "puppeteer": "^1.18.1",
         "puppeteer-extra": "^2.1.3",
