--- a/crawler/package.json
+++ b/crawler/package.json
@@ -6,11 +6,17 @@
     "license": "MPL-2.0",
     "dependencies": {
         "argparse": "^1.0.10",
+        "async": "^3.1.0",
+        "aws-sdk": "^2.509.0",
         "file-type": "^12.1.0",
-        "fs-extra": "^8.1.0",
         "mime-types": "^2.1.24",
-        "puppeteer": "^1.18.1",
+        "parse-domain": "^2.3.2",
+        "path": "^0.12.7",
+        "puppeteer": "^1.19.0",
         "puppeteer-extra": "^2.1.3",
-        "puppeteer-extra-plugin-stealth": "^2.2.2"
+        "puppeteer-extra-plugin-stealth": "^2.2.2",
+        "slonik": "^18.10.0",
+        "slugify": "^1.3.4",
+        "sqorn": "0.0.45"
     }
 }
