--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ crawler/node_modules
 crawler/timeouts.log
 crawler/top-1m.csv
 crawler/response_errors.log
+crawler/run_crawl.sh
 
 .DS_Store
 *.graphml
